--- a/.github/workflows/deploy-container.yml
+++ b/.github/workflows/deploy-container.yml
@@ -19,6 +19,12 @@ jobs:
         run: mvn clean install --file karaf-system/pom.xml -Pecs-build -Dmaven.test.skip=true -Dpostgres.ecs.password=$postgres.ecs.password
         env:
           postgres.ecs.password: ${{secrets.PAT_LEGO_DB_PWD}} 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
       - name: Login to AmazonECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
